spacing fix

--- a/client/src/pages/Character/Character.css
+++ b/client/src/pages/Character/Character.css
@@ -116,4 +116,9 @@
     .character-page .btns {
         justify-content: flex-end;
     }
+
+    .character-page .cart-btn,
+    .character-page .continue-btn {
+        margin: 0px;
+    }
 }
